# SmartCalc

./: CMakeLists.txt  Doxyfile  Makefile
include/: CalcModel.h  CalcView.h  Controller.h  GraphView.h  ModelTest.h  qcustomplot.h
sources/: CalcModel.cc  CalcView.cc  Controller.cc  GraphView.cc  main.cc  qcustomplot.cpp
sources/tests/: ModelTest.cc
sources/ui/: calc.ui  graph.ui
